# shconfparser

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev27.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/labels/: issue_labeler.yml  labeler.yml  labels.yml
.github/workflows/: codeql-analysis.yml  issue_labeler.yml  labeler.yml  labels.yml  publish-uv.yml  publish.yml  pytest.yml  pytest_27.yml  remove_labeler.yml  test-uv.yml
data/: shcommands.txt  shrun.txt
docs/: ARCHITECTURE.md  BUSINESS_STANDARDS.md  MODERNIZATION_GUIDE.md  MODERNIZATION_SUMMARY.md  PYTHON_COMPATIBILITY.md  QUICKSTART.md  README.md  XPATH_GUIDE.md
shconfparser/: __init__.py  exceptions.py  models.py  parser.py  protocols.py  py.typed  reader.py  search.py  shsplit.py  table_parser.py  tree_parser.py  xpath.py
shconfparser/shconfparser/: reader.py  shsplit.py
src/shconfparser/: parser.py
tests/: test_parser.py  test_reader.py  test_search.py  test_shsplit.py  test_xpath.py
tests/unit/: test_parser.py  test_reader.py  test_shsplit.py
